[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Fifteen_Board.gd" type="Script" id=1]
[ext_resource path="res://sprites/fundo.png" type="Texture" id=2]
[ext_resource path="res://sprites/tela medio.png" type="Texture" id=3]
[ext_resource path="res://scenes/Tile.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/botao_embaralhar.png" type="Texture" id=5]
[ext_resource path="res://sprites/botao_inicio.png" type="Texture" id=6]
[ext_resource path="res://sprites/caixa texto sobre o jogo.png" type="Texture" id=7]
[ext_resource path="res://sprites/polvo_completo.png" type="Texture" id=8]
[ext_resource path="res://SFX/menu_selection_1.wav" type="AudioStream" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="TileSet" id=2]
0/name = "fundo.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=3]
resource_name = "embaralhar_botao"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("embaralhar:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "inicio_botao"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("inicio:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Fifteeen1" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 1327.49, 65.7233, 1547.0, 1464.0, 1553.0, 288.835, 511.63, 734.641, 957.537, 44.6329, 842.389, 176.702 ],
"_edit_vertical_guides_": [ 894.804, 448.063, 671.976, 1115.58, 1349.71, 1573.16 ]
}

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.329412, 0.32549, 0.32549, 1 )
tile_set = SubResource( 2 )
cell_size = Vector2( 128, 128 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0 )

[node name="background_total" type="Sprite" parent="."]
position = Vector2( 891.122, 518.666 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )

[node name="background_pe√ßas" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 897.796, 511.326 )
scale = Vector2( 7.15399, 7.28352 )
texture = ExtResource( 2 )

[node name="Tile_1" parent="." instance=ExtResource( 4 )]
position = Vector2( 1230, 402 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_1" type="Position2D" parent="."]
position = Vector2( 1230, 402 )

[node name="Tile_2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1230, 624 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_2" type="Position2D" parent="."]
position = Vector2( 1230, 624 )

[node name="Tile_3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1230, 846 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_3" type="Position2D" parent="."]
position = Vector2( 1230, 846 )

[node name="Tile_4" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 180 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_4" type="Position2D" parent="."]
position = Vector2( 1008, 180 )

[node name="Tile_5" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 402 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_5" type="Position2D" parent="."]
position = Vector2( 1008, 402 )

[node name="Tile_6" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 624 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_6" type="Position2D" parent="."]
position = Vector2( 1008, 624 )

[node name="Tile_7" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 846 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_7" type="Position2D" parent="."]
position = Vector2( 1008, 846 )

[node name="Tile_8" parent="." instance=ExtResource( 4 )]
position = Vector2( 786, 180 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_8" type="Position2D" parent="."]
position = Vector2( 786, 180 )

[node name="Tile_9" parent="." instance=ExtResource( 4 )]
position = Vector2( 786, 402 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_9" type="Position2D" parent="."]
position = Vector2( 786, 402 )

[node name="Tile_10" parent="." instance=ExtResource( 4 )]
position = Vector2( 786, 624 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_10" type="Position2D" parent="."]
position = Vector2( 786, 624 )

[node name="Tile_11" parent="." instance=ExtResource( 4 )]
position = Vector2( 786, 846 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_11" type="Position2D" parent="."]
position = Vector2( 786, 846 )

[node name="Tile_12" parent="." instance=ExtResource( 4 )]
position = Vector2( 564, 180 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_12" type="Position2D" parent="."]
position = Vector2( 564, 180 )

[node name="Tile_13" parent="." instance=ExtResource( 4 )]
position = Vector2( 564, 402 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_13" type="Position2D" parent="."]
position = Vector2( 564, 402 )

[node name="Tile_14" parent="." instance=ExtResource( 4 )]
position = Vector2( 564, 624 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_14" type="Position2D" parent="."]
position = Vector2( 564, 624 )

[node name="Tile_15" parent="." instance=ExtResource( 4 )]
position = Vector2( 564, 846 )
rotation = 1.5708
scale = Vector2( 1.741, 1.741 )

[node name="Pos_15" type="Position2D" parent="."]
position = Vector2( 564, 846 )

[node name="embaralhar" type="Button" parent="."]
margin_left = 232.0
margin_top = 37.0
margin_right = 507.0
margin_bottom = 158.0
rect_rotation = 90.0
icon = ExtResource( 5 )
flat = true

[node name="inicio" type="Button" parent="."]
margin_left = 384.0
margin_top = 37.0
margin_right = 659.0
margin_bottom = 158.0
rect_rotation = 90.0
icon = ExtResource( 6 )
flat = true

[node name="balao" type="Sprite" parent="."]
position = Vector2( 1582, 752 )
rotation = 1.5708
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="botao_fifteen_animation" type="AnimationPlayer" parent="."]
anims/embaralhar_botao = SubResource( 3 )
anims/inicio_botao = SubResource( 4 )

[node name="completo" type="Sprite" parent="."]
position = Vector2( 1633, 746 )
rotation = 1.5708
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 8 )

[node name="touch_botao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="pressed" from="embaralhar" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="inicio" to="." method="_on_Button2_pressed"]
